# aug

./: .cproject  .project  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.pl  configure  configure.ac  configure.in  index.html  ltmain.sh  sfbatch.sh  syscall.csv  syscall.txt
doc/: Doxyfile  Makefile.am  Makefile.in  atomic.w  augas.txt  augasintro.w  augintro.mk  augintro.w  augserv.html  cvs-policy.txt  daug.txt  daugintro.mk  daugintro.w  manual.xml  notice.txt
doc/man/: Makefile.am  Makefile.in  mar.1
doc/www/: Makefile.am  Makefile.in  index.html
example/augas/: Makefile.am  Makefile.in  augas.js  bench.R  bench.conf  bench.sh  client.cpp  command.cpp  file.cpp  http.conf  http.cpp  index.html  minimal.c  modules.mk  sched.conf  sched.cpp  sched.js  server.cpp  test.conf
example/augas/etc/: Makefile.am  Makefile.in  README  augas.css  cacert.pem  certs.sh  clientcert.pem  clientkey.pem  clientreq.pem  mimetypes.conf  passwd.txt  servercert.pem  serverkey.pem  serverreq.pem
example/augas/htdocs/: Makefile.am  Makefile.in  aug.css  aug.js  augas.css  augas.js  index.html  sched.js
example/cpp/: Makefile.am  Makefile.in  calc.cpp  heartbeat.cpp  mcastrecv.cpp  mcastsend.cpp  mplexd.cpp  muxerd.cpp  netevent.cpp  packet.cpp  profile.cpp  revpol.cpp  tcpclient.cpp  tcpserver.cpp  timerd.cpp
example/httpd/: Makefile.am  Makefile.in  httpd.c  message.c  message.h  state.c  state.h
example/mplexd/: Makefile.am  Makefile.in  message.cpp  message.hpp  mplexd.cpp  state.cpp  state.hpp  test.pl
example/timerd/: Makefile.am  Makefile.in  timerd.cpp
src/c/: Makefile.am  Makefile.in  aub.h  aug.h  augabi.h  augas.h  augbool.h  augctx.h  augext.h  augmar.h  augmod.h  augnet.h  augob.h  augobj.h  augrt.h  augserv.h  augses.h  augses.xml  augsrv.h  augsys.h  augtype.h  augtypes.h  augutil.h  aum.h  lang.mk  maud.h
src/c/augas/: Makefile.am  Makefile.in  config.c  config.h
src/c/augctx/: Makefile.am  Makefile.in  atomic.c  atomic.h  atomictest.c  base.c  base.h  basetest.c  clock.c  clock.h  clock.xml  config.c  config.h  ctx.c  ctx.h  ctx.xml  defs.c  defs.h  errinfo.c  errinfo.h  errinfotest.c  errno.c  errno.h  file.c  file.h  file.xml  lock.c  lock.h  log.c  log.h  log.xml  logtest.c  malloc.c  mpool.c  mpool.h  mpool.xml  stream.c  stream.h  stream.xml  string.c  (+7 more)
src/c/augext/: Makefile.am  Makefile.in  app.h  app.xml  array.h  array.xml  blob.h  blob.xml  boxint.h  boxint.xml  boxptr.h  boxptr.xml  chan.h  chan.xml  clock.h  clock.xml  ctx.h  ctx.xml  err.h  err.xml  error.h  error.xml  http.h  http.xml  intbox.h  intbox.xml  iter.h  iter.xml  log.h  log.xml  mar.h  mar.xml  mpool.h  mpool.xml  msg.h  msg.xml  ptrbox.h  ptrbox.xml  rpc.h  rpc.xml  (+7 more)
src/c/augmar/: Makefile.am  Makefile.in  body_.c  body_.h  config.c  config.h  file_.c  file_.h  flags_.c  flags_.h  format_.c  format_.h  header_.c  header_.h  info_.c  info_.h  maintest.c  mar.c  mar.h  mfile_.c  mfile_.h  seq_.c  seq_.h  test.c  types.c  types.h
src/c/augnet/: Makefile.am  Makefile.in  auth.c  auth.h  base.c  base.h  base64.c  base64.h  base64test.c  chan.c  chan.h  channels.c  channels.h  channelstest.c  chans.c  chans.h  chanstest.c  config.c  config.h  conn.c  conn.h  connector.c  connector.h  extend.c  extend.h  file.c  file.h  fix.c  fix.h  fixtest.c  heartbeat.c  heartbeat.h  http.c  http.h  httptest.c  inet.c  inet.h  mar.c  mar.h  nbfile.c  (+25 more)
src/c/augob/: Makefile.am  Makefile.in  addrob.h  addrob.xml  blob.h  blob.xml  channelob.h  channelob.xml  errinfob.h  errinfob.xml  eventob.h  eventob.xml  iterob.h  iterob.xml  longob.h  longob.xml  rpcob.h  rpcob.xml  seqob.h  seqob.xml  streamob.h  streamob.xml  types.h  var.h  varrayob.h  varrayob.xml
src/c/augobj/: Makefile.am  Makefile.in  addrob.h  blob.h  blob.xml  eventob.h  eventob.xml  longob.h
src/c/augpy/: Makefile.am  Makefile.in  augpy.c  entry.c  host.c  host.h  module.c  (+3 more)
src/cpp/: Makefile.am  Makefile.in  aubpp.hpp  augabipp.hpp  augaspp.hpp  augctxpp.hpp  augmarpp.hpp  augmodpp.hpp  augnetpp.hpp  augnullpp.hpp  augobjpp.hpp  augpp.hpp  augrtpp.hpp  augservpp.hpp  augsrvpp.hpp  augsyspp.hpp  augutilpp.hpp  aumpp.hpp  lang.mk  maudpp.hpp  null.hpp
src/py/: Makefile.am  Makefile.in  augutil.py  buffer.py  interpreter.py  log.py  modclient.py  modecho.py  modproxy.py  modskel.py  modstop.py  modtest1.py  modtest3.py  modtest4.py  modtest5.py  modtest6.py  pyclient.py  pyecho.py  pyproxy.py  pyskel.py  pystop.py  pytest1.py  pytest2.py  pytest3.py  pytest4.py  pytest5.py  pytest6.py  pytest7.py
src/rb/: Makefile.am  Makefile.in  aubidl  augidl  augutil.rb  log.rb  rbecho.rb  rbflags  rbskel.rb  rbstop.rb  rbtest1.rb  rbtest2.rb  rbtest3.rb  rbtest4.rb  rbtest5.rb  rbtest6.rb  rbtest7.rb
test/: Makefile.am  Makefile.in  pytest1  pytest2  pytest3  pytest4  pytest5  pytest6  pytest7  rbtest1  rbtest2  rbtest3  rbtest4  rbtest5  rbtest6  rbtest7
vc7/: Makefile.am  Makefile.in  aug.bat  aug.sln  augarc.vcproj  augarcpp.vcproj  augas.sln  augas.vcproj  augaspp.vcproj  augctx.vcproj  augctxpp.vcproj  augd.vcproj  aught.vcproj  augmar.vcproj  augmarpp.vcproj  augnet.vcproj  augnetpp.vcproj  augpy.vcproj  augrb.vcproj  augres.vcproj  augrtpp.vcproj  augserv.vcproj  augservpp.vcproj  augsrv.vcproj  augsrvpp.vcproj  augsub.vcproj  augsubpp.vcproj  augsys.vcproj  augsyspp.vcproj  augutil.vcproj  augutilpp.vcproj  client.vcproj  command.vcproj  daug.bat  daug.sln  daug.vcproj  example.cpp  example.vcproj  htdigest.vcproj  http.vcproj  (+19 more)
vc9/: Makefile.am  Makefile.in  aug.bat  aug.sln  augarc.vcproj  augarcpp.vcproj  augaspp.vcproj  augctx.vcproj  augctxpp.vcproj  augd.vcproj  aught.vcproj  augmar.vcproj  augmarpp.vcproj  augnet.vcproj  augnetpp.vcproj  augpy.vcproj  augrb.vcproj  augres.vcproj  augserv.vcproj  augservpp.vcproj  augsub.vcproj  augsubpp.vcproj  augsys.vcproj  augsyspp.vcproj  augutil.vcproj  augutilpp.vcproj  client.vcproj  command.vcproj  example.vcproj  htdigest.vcproj  mar.vcproj  minimal.vcproj  reconf.bat  sched.vcproj  server.vcproj  stop.bat  test.bat  test.conf  uninstall.bat
(+952 files in other folders)
