#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.56)
#AC_INIT([src/augconfig.h.in])
AC_INIT([aug], [trunk], [mark@emantic.co.uk])

#AM_INIT_AUTOMAKE([aug], [trunk], [mark@emantic.co.uk])
AM_INIT_AUTOMAKE()
AC_CONFIG_HEADER([src/augconfig.h])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AC_ARG_ENABLE(threads,
    [  --enable-threads        enable thread support @<:@default=yes@:>@],
    threads=$enableval)

# Checks for libraries.

LDFLAGS="-lm $LDFLAGS"

if test "$threads" != "no"; then
   CFLAGS="-D_MT -D_REENTRANT $CFLAGS"
   CXXFLAGS="-D_MT -D_REENTRANT $CXXFLAGS"
fi

case $host in
*-*-cygwin* | *-*-mingw*)

    CFLAGS="$CFLAGS -DWINVER=0x0501"
    CXXFLAGS="$CXXFLAGS -DWINVER=0x0501"
    LDFLAGS="-lws2_32 -liphlpapi $LDFLAGS"
    LIBS="-Wl,-lws2_32 -Wl,-liphlpapi $LIBS"

    if test "$threads" != "no"; then
        CFLAGS="-mthreads $CFLAGS"
        CXXFLAGS="-mthreads $CXXFLAGS"
        LDFLAGS="-mthreads $LDFLAGS"
    fi
    ;;
*)
    AC_SEARCH_LIBS(gethostbyname, nsl)
    AC_SEARCH_LIBS(gethostname, nsl)
    AC_SEARCH_LIBS(socket, socket)
    AC_SEARCH_LIBS(dlopen, [dl dlcompat])

    if test "$threads" != "no"; then
        AC_SEARCH_LIBS(pthread_create, [pthread])
    fi
    ;;
esac

# Checks for libraries.

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h limits.h malloc.h netdb.h netinet/in.h stddef.h stdlib.h string.h strings.h sys/ioctl.h sys/param.h sys/socket.h sys/sockio.h sys/time.h sys/timeb.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_BIGENDIAN

AC_MSG_CHECKING(for socklen_t)
AC_TRY_COMPILE([
    # include <sys/types.h>
    #if !defined(_WIN32)
    # include <sys/socket.h>
    #else /* _WIN32 */
    # include <winsock2.h>
    #endif /* _WIN32 */
    socklen_t x;
], [],
[
    AC_MSG_RESULT(yes)
], [
    AC_TRY_COMPILE([
        # include <sys/types.h>
        #if !defined(_WIN32)
        # include <sys/socket.h>
        #else /* _WIN32 */
        # include <winsock2.h>
        #endif /* _WIN32 */
        int accept(int, struct sockaddr*, size_t*);
    ], [], [
        AC_MSG_RESULT(size_t)
        AC_DEFINE(socklen_t, size_t, [socklen_t size])
    ], [
        AC_MSG_RESULT(int)
        AC_DEFINE(socklen_t, int, [socklen_t size])
    ])
])

AC_MSG_CHECKING(for ipv6)
AC_TRY_COMPILE([
    # include <sys/types.h>
    #if !defined(_WIN32)
    # include <sys/socket.h>
    # include <netinet/in.h>
    # include <arpa/inet.h>
    # include <netdb.h>
    #else /* _WIN32 */
    # include <winsock2.h>
    # include <ws2tcpip.h>
    #endif /* _WIN32 */
    int x = IPV6_ADD_MEMBERSHIP;
], [], [
	AC_MSG_RESULT(yes)
        AC_DEFINE(socklen_t, int, [socklen_t size])
	AC_DEFINE(HAVE_IPV6, 1, [Define to 1 if you have ipv6 support.])
], [
	AC_MSG_RESULT(no)
])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit bzero dup2 ftruncate getcwd getpagesize gettimeofday localtime_r memchr memmove memset munmap pathconf poll realpath select socket strcasecmp strchr strerror strlcpy strncasecmp strrchr strspn strtoul])

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 doc/man/Makefile
                 etc/Makefile
                 example/Makefile
                 example/cpp/Makefile
                 example/httpd/Makefile
                 example/module/Makefile
                 src/Makefile
                 src/c/Makefile
                 src/c/augmar/Makefile
                 src/c/augnet/Makefile
                 src/c/augres/Makefile
                 src/c/augsrv/Makefile
                 src/c/augsrv/posix/Makefile
                 src/c/augsrv/win32/Makefile
                 src/c/augsys/Makefile
                 src/c/augsys/osx/Makefile
                 src/c/augsys/posix/Makefile
                 src/c/augsys/win32/Makefile
                 src/c/augutil/Makefile
                 src/c/mar/Makefile
                 src/cpp/Makefile
                 src/cpp/augmarpp/Makefile
                 src/cpp/augnetpp/Makefile
                 src/cpp/augsrvpp/Makefile
                 src/cpp/augsyspp/Makefile
                 src/cpp/augutilpp/Makefile
                 src/cpp/augas/Makefile
                 src/pl/Makefile
                 src/sh/Makefile
                 vc7/Makefile])
AC_OUTPUT
