EXTRA_DIST = \
	aug.bat \
	aug.sln \
	augaspp.vcproj \
	augctx.vcproj \
	augctxpp.vcproj \
	augd.vcproj \
	aught.vcproj \
	augmar.vcproj \
	augmarpp.vcproj \
	augnet.vcproj \
	augnetpp.vcproj \
	augpy.vcproj \
	augrb.vcproj \
	augres.vcproj \
	augserv.vcproj \
	augservpp.vcproj \
	augsub.vcproj \
	augsubpp.vcproj \
	augsys.vcproj \
	augsyspp.vcproj \
	augutil.vcproj \
	augutilpp.vcproj \
	client.vcproj \
	command.vcproj \
	example.vcproj \
	htdigest.vcproj \
	install.bat \
	mar.vcproj \
	minimal.vcproj \
	reconf.bat \
	sched.vcproj \
	scratch.cpp \
	server.vcproj \
	setup.vdproj \
	start.bat \
	stop.bat \
	test.bat \
	test.conf \
	uninstall.bat
