EXTRA_DIST = \
	aug.bat \
	aug.sln \
	augarc.vcproj \
	augarcpp.vcproj \
	augctx.vcproj \
	augctxpp.vcproj \
	augd.vcproj \
	aught.vcproj \
	augmar.vcproj \
	augmarpp.vcproj \
	augnet.vcproj \
	augnetpp.vcproj \
	augpy.vcproj \
	augrb.vcproj \
	augres.vcproj \
	augaspp.vcproj \
	augserv.vcproj \
	augservpp.vcproj \
	augsys.vcproj \
	augsyspp.vcproj \
	augutil.vcproj \
	augutilpp.vcproj \
	client.vcproj \
	command.vcproj \
	example.vcproj \
	htdigest.vcproj \
	mar.vcproj \
	minimal.vcproj \
	sched.vcproj \
	server.vcproj \
	install.bat \
	reconf.bat \
	start.bat \
	stop.bat \
	test.bat \
	test.conf \
	uninstall.bat \
	scratch.cpp
